syntax = "proto3";

package pb;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/lovelyoyrmia/protostub/examples/pb";

message User {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
